--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,9 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+body {
+  background-color: #0336ff; /* Replace with your desired color */
+ }
 
 .App-header {
   background-color: #282c34;
@@ -36,3 +39,7 @@
     transform: rotate(360deg);
   }
 }
+
+h1.sal-heading {
+  color: white;
+ }
